# ai-rag-syst

./: .gitignore.txt  README.md  app.py  contract_check.py  ingest_data.py  main.py  pyproject.toml  test_llm.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/star_charts/0/: newest_clocks.json
qdrant_storage/collections/star_charts/0/segments/74b90f31-38a9-470f-b8bf-7c27fe54e7fc/: mutable_id_tracker.mappings
qdrant_storage/collections/zayan_docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/zayan_docs/0/segments/2b9f2b2f-05f2-4332-b90b-01228b5c88c0/: mutable_id_tracker.mappings
qdrant_storage/collections/zayan_docs/0/segments/30cc2262-88f8-4f0f-851b-0f8ad21f04cb/: mutable_id_tracker.mappings
qdrant_storage/collections/zayan_docs/0/segments/ecd834ea-8f67-40fb-bec0-65a389f05e30/: mutable_id_tracker.mappings
templates/: index.html
zayan_db/: chroma.sqlite3
