[project]
name = "zayan-ai"
version = "0.1.0"
description = "Zayan Technologies AI Assistant"
authors = [{name = "M.Azam"}]
requires-python = ">=3.10,<4.0"

dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-ollama>=0.1.0",
    "langchain-huggingface>=0.1.0",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "pypdf>=5.0.0",
    "jinja2>=3.1.0",
    "qdrant-client>=1.9.0",
    "litellm (>=1.82.6,<2.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "langchain-text-splitters (>=1.1.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"